fixing dark mode design

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,9 +6,9 @@ body {
   width: 100%;
   font-family: Arial, sans-serif;
   transition: background-color 0.5s ease, color 0.5s ease;
-  background-color: #ffffff;
-  background-image: radial-gradient(#d6d6d6 1px, transparent 1px);
-  background-size: 20px 20px;
+  /* background-color: #ffffff; */
+  /* background-image: radial-gradient(rgba(96, 96, 96, 0.04) 1px, transparent 1px); */
+  /* background-size: 20px 20px; */
 }
 
 /* Login css */ /* Global container */
@@ -470,6 +470,13 @@ body.dark-mode {
   background-color: rgb(60, 60, 60);
   color: #f5f5f5;
   background-image: radial-gradient(rgba(255, 255, 255, 0.04) 1px, transparent 1px);
+  background-size: 20px 20px;
+}
+
+body.light-mode {
+  background-color: rgb(255, 255, 255);
+  color: #3b3b3b;
+  background-image: radial-gradient(rgba(18, 18, 18, 0.759) 1px, transparent 2px);
   background-size: 20px 20px;
 }
 
